welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:4: error: not found: value i
      return i
             ^