welcome.lessons.welcome.array.search.IndexOfValue.scala.code
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {

    if(nums(3)==lookingFor){
      return i
    }else{return -1}
  }
